# Godwit

./: README.md  file.json  runtcpclient.sh  runtcpserver.sh  settings.json  start.sh
transmission/: count.json  settings.json
transmission/GenKey/: decryptK.sh  decryptionKey.py  encryptK.sh  encryptionKey.py  genK.sh  generateKey.py
transmission/tcpclient/: Cargo.toml
transmission/tcpclient/src/: TCPclient.rs
transmission/tcpserver/: Cargo.toml
transmission/tcpserver/src/: TCPserver.rs  blackIPlist.json  checking_dir.rs  currentMass.json  main.rs
