[package]
name = "tcpserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
local-ip = "0.1.0"
serde_json = "1.0"
# Ваши зависимости

[[bin]]
name = "runtcpserver"
path = "src/tcpserver.rs"
